# Flowka

./: .env.example  .gitattributes  .gitignore  Flowka Overview.docx  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: database.py  metrics_repository.py  telemetry.py
backend/tests/: test_api.py  test_demo_telemetry.py  test_metrics_repository.py
demo/consumer/: pyproject.toml
demo/consumer/app/: __init__.py  main.py
demo/producer/: Dockerfile  pyproject.toml
demo/producer/app/: __init__.py  main.py
docs/: architecture.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ConsumerGroups.tsx  DashboardHeader.tsx  FlowCanvas.tsx  MessageViewer.tsx  MetricCard.test.tsx  MetricCard.tsx  MetricsChart.tsx  TopicExplorer.tsx
frontend/src/hooks/: useRealtime.ts
frontend/src/lib/: status.test.ts  status.ts
scripts/: braille_loader.py  flowka_up.py
