[project]
name = "flowka-backend"
version = "0.1.0"
description = "FastAPI telemetry API for Flowka Kafka observability."
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0,<0.13.0",
    "asyncpg>=0.30.0,<0.31.0",
    "fastapi>=0.115.0,<0.116.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "SQLAlchemy[asyncio]>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0,<0.22.0",
    "httpx>=0.28.0,<0.29.0",
    "mypy>=1.14.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<0.26.0",
    "ruff>=0.8.0,<0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".deps", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = []
ignore_missing_imports = true
exclude = ["^\\.deps/", "^\\.venv/"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
